# axum-chat-app

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migration/src/: lib.rs  m20250629_090356_create_table.rs
src/: main.rs  main_docker.rs
src/api/: chat.rs  chat_room.rs  mod.rs  state.rs  user.rs
src/db/: init.rs
src/entities/: chat.rs  room.rs  users.rs
static/: index.html
