[package]
name = "axum-chat-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[[bin]]
name = "docker"
path = "src/main_docker.rs"

[dependencies]
axum = { version = "0.8.4", features = ["json", "macros"] }
shuttle-axum = { version = "0.55.0", features = ["axum"] }
shuttle-runtime = { version = "0.55.0", default-features = false }
shuttle-shared-db = { version = "0.55.0", features = ["postgres", "sqlx"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
futures-util = "0.3.31"
tracing-subscriber = "0.3.19"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sqlx = "0.8.6"
migration = {path = "migration"}
serde_json = "1.0.140"
serde = "1.0.219"
dotenvy = "0.15.7"
chrono = "0.4.41"
